1. Sidebar collapsed width fixed 2. When sidebar is collapsed, the sidebar footer will be hidden

--- a/public/modules/core/less/core.styles.less
+++ b/public/modules/core/less/core.styles.less
@@ -1,5 +1,7 @@
 // Overwrite @aside-bg in theme-f.less to change background color of sidebar
 @aside-bg: rgba(0, 0, 0, 0.25);
+@normal-sidebar-width: 300px;
+@collapsed-sidebar-width: 70px;
 .sidebar-footer {
 	position: absolute;
 	width: 100%;
@@ -13,15 +15,15 @@
 .margin-right-16 {
 	margin-left: 16px;
 }
-.margin-left-300 {
-	margin-left: 300px !important;
+.margin-left-sidebar {
+	margin-left: @normal-sidebar-width !important;
 }
 .sidebar-subnav {
 	background-color: rgba(0, 0, 0, 0.6);
-	margin-left: 300px !important;
+	margin-left: @normal-sidebar-width !important;
 }
 .aside, .aside-inner, .sidebar {
-	width: 300px !important;
+	width: @normal-sidebar-width !important;
 }
 .sidebar {
 	.nav {
@@ -33,5 +35,19 @@
 .sidebar-subnav {
 	li {
 		font-size: 1.4em;
+	}
+}
+.aside-collapsed {
+	.aside, .aside-inner, .sidebar {
+		width: @collapsed-sidebar-width !important;
+	}
+	.margin-left-sidebar {
+		margin-left: @collapsed-sidebar-width !important;
+	}
+	.sidebar-subnav {
+		margin-left: @collapsed-sidebar-width !important;
+	}
+	.sidebar-footer {
+		display: none;
 	}
 }
